--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-errors": "^1.8.0",
     "mongoose": "^5.6.13",
     "morgan": "^1.10.0",
+    "newsapi": "^2.4.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
