--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@polygon.io/client-js": "^2.1.2",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.4.1",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
